# dna-x402

./: .gitattributes  .gitignore  .mailmap  AUDIT_REPORT.md  AUTONOMOUS_DEPLOYMENT.md  BREAK_GLASS_MANUAL.md  Cargo.toml  Codex.txt  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_AND_TEST.md  FINAL_PROOF.py  FINAL_SECURITY_SUMMARY.md  GO_NO_GO_CHECKLIST.md  GRANT_APPLICATION.md  INSTALL_PDX.bat  INSTALL_PDX.exe.bat  INSTALL_PDX.html  LICENSE  NOTICE  ONE_CLICK_INSTALL.bat  POLICY_SPEC.md  PROJECT_SUMMARY.md  PROOF_FORMAT_README.md  README.md  SECURITY.md  SECURITY_NO_SPECTRE.md  USER_GUIDE.md  USER_INTERACTION_GUIDE.md  VIDEO_SCRIPT.md  ZK_SECURITY_AUDIT.md  anon_tx_data.json  anonymous_proof.py  call_pdx.py  corrected_wallets.txt  create_anon_tx.py  create_null_token.py  demo_transfer.py  deploy_devnet.sh  deploy_null_paradox_devnet.sh  (+23 more)
.clone/liquefy-openclaw-integration/: liquefy_token_ledger.py  pyproject.toml
.clone/liquefy-openclaw-integration/plugins/dark-null/: SKILL.md  dark_null_bridge.py
.clone/liquefy-openclaw-integration/plugins/dna-payment/: dna_bridge.py  dna_payment_bridge.py
audit_out_mainnet/: MAINNET_COST_PLAN.md  STEP2_4_SUMMARY.md  authority_plan.json  deploy_estimate_mainnet.json  deploy_ledger_mainnet.json  run_meta.json
ceremony/: CEREMONY_ANNOUNCEMENTS.md  CONTRIBUTING_V3.md  README.md  run-ceremony-v3.mjs  run-ceremony.mjs
circuits/: SHIELDED_WITHDRAW_V3_HARDENING_BENCH.md  X402_ACCESS_HARDENING_BENCH.md  dark.zkey  dark_transfer.circom  dark_transfer.cpp  dark_transfer.r1cs  dark_transfer.sym  dark_transfer.wasm  input.json  package-lock.json  setup_pdx.sh  shielded_withdraw.circom  shielded_withdraw_v2.circom  shielded_withdraw_v3.circom  test.circom  track_record.circom  verification_key.json  x402_access.circom  x402_access_v2.circom
client/: dark_client.py  nebula_core.py  nebula_v23_full.py  pie_cli.py  proof_packer.py  requirements.txt  test_dark_protocol.py
config/: x402.public-beta.example.json  x402.staging.private-pilot.example.json
configs/: devnet.oss.json  mainnet.commercial.json  mainnet.oss.json
crates/alt-fog-router/: Cargo.toml
crates/alt-fog-router/src/: lib.rs
crates/alt-fog-router/tests/: proptest_fog.rs
crates/compute-coupon/: Cargo.toml
crates/compute-coupon/src/: lib.rs
crates/dark-agent-payment-sdk/: Cargo.toml
crates/dark-agent-payment-sdk/src/: lib.rs
crates/dark-alien-final-demo/: Cargo.toml
crates/dark-alien-final-demo/src/: lib.rs
crates/dark-batch-stealth-scan/: Cargo.toml
crates/dark-batch-stealth-scan/src/: lib.rs
crates/dark-bn254-proof-gen/: Cargo.toml
crates/dark-bn254-proof-gen/src/: lib.rs
crates/dark-bundle-cloak/: Cargo.toml
crates/dark-bundle-cloak/src/: lib.rs
crates/dark-fedimint-ecash/: Cargo.toml
crates/dark-fedimint-ecash/src/: bdhke.rs  dleq.rs  federation.rs  lib.rs  token.rs
crates/dark-frontier-demo/: Cargo.toml
crates/dark-frontier-demo/src/: lib.rs  main.rs
crates/dark-hash-core/: Cargo.toml
crates/dark-hash-core/src/: lib.rs
crates/dark-hash-core/vectors/: hash_vectors_poseidon_mock.json  hash_vectors_poseidon_real.json  hash_vectors_sha256.json
crates/dark-kvac/: Cargo.toml  README.md  SCHEME.md
crates/dark-kvac/src/: fs.rs  group.rs  issue.rs  keys.rs  lib.rs  nullifier.rs  params.rs  present.rs  util.rs  verify.rs  wire.rs
crates/dark-kvac/tests/: scheme.rs
crates/dark-kzg-verifier/: Cargo.toml
crates/dark-kzg-verifier/src/: lib.rs
crates/dark-macaroons/: Cargo.toml
crates/dark-macaroons/src/: lib.rs
crates/dark-note-compression/: Cargo.toml
crates/dark-note-compression/src/: lib.rs
crates/dark-nullifier-epoch-manager/: Cargo.toml
crates/dark-nullifier-epoch-manager/src/: lib.rs
crates/dark-payment-channel/: Cargo.toml
crates/dark-payment-channel/src/: lib.rs
crates/dark-poseidon-real/: Cargo.toml
crates/dark-poseidon-real/reference/: gen_ref.mjs
crates/dark-poseidon-real/src/: lib.rs
crates/dark-poseidon-tree/: Cargo.toml
crates/dark-poseidon-tree/src/: lib.rs
crates/dark-poseidon-tree/tests/: proptest_hashing.rs
crates/dark-private-x402/: Cargo.toml
crates/dark-private-x402/src/: lib.rs
crates/dark-relay-router/: Cargo.toml
crates/dark-relay-router/src/: lib.rs
crates/dark-relay-router/tests/: statistical_jitter.rs
crates/dark-ritual-gate-verify/: Cargo.toml
crates/dark-shielded-pool-core/: Cargo.toml
crates/dark-shielded-pool-core/src/: lib.rs
crates/dark-stealth-address/: Cargo.toml
crates/dark-stealth-address/src/: lib.rs
crates/dark-stealth-ed25519/: Cargo.toml
crates/dark-stealth-ed25519/examples/: vector.rs
crates/dark-stealth-ed25519/src/: lib.rs
crates/dark-withdrawal-bundle/: Cargo.toml
crates/dark-withdrawal-bundle/src/: lib.rs
crates/dark-x402-devnet-verify/: Cargo.toml
crates/dark-x402-devnet-verify/src/: lib.rs
crates/dark-x402-e2e-demo/: Cargo.toml
crates/dark-x402-e2e-demo/src/: main.rs
crates/dark-x402-kvac/: Cargo.toml
crates/dark-x402-kvac/src/: lib.rs
docs/: 2030_DEMO_FLOW.md  AGENT_QUICKSTART.md  ALIEN_FINAL_AUDIT_PACKET.md  ALIEN_FINAL_BASELINE.md  ALIEN_FINAL_DEMO_FLOW.md  ALIEN_FINAL_RISK_REGISTER.md  ALT_SETUP.md  ANTI_COPYTRADE_ALPHA.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_MODULARITY.md  AUDIT.md  BONSOL_RISC0_PROOF_LAYER.md  BUILDER_FEES.md  BUILDER_QUICKSTART.md  COMPETITIVE_EDGE.md  CONFIDENTIAL_BALANCES_NULL.md  CONTEXT_CAPSULE_PUBLIC_PROOF.md  CPI_GUARD_INTEGRATION.md  DARK_CRATES_STATUS.md  DARK_NULL_2030_ORIGINALS.md  DARK_NULL_ALIEN_TEK.md  DARK_NULL_FRONTIER.md  DARK_NULL_FRONTIER_RESEARCH.md  DARK_NULL_NIGHT_COOK_2030.md  DARK_NULL_PRIVACY_PATH.md  DARK_NULL_ROOT_MULTISIG.md  DARK_RELAY_RAIL.md  DARK_X402_DEVNET_FLOW.md  DARK_ZK_PRIMITIVES.md  DEEPFAKE_GATE.md  DEGEN_SWARM_DEMO.md  DEGEN_USE_CASES.md  DEPLOY_FLY.md  DEPLOY_RAILWAY.md  DEVNET_DEPLOY.md  DEVNET_PROOF.md  DNA_X402_ADMIN_ACTION_RUNBOOK.md  DNA_X402_AGENT_BUILDER.md  (+134 more)
evidence/: dark-relay-rail-buckets-devnet.json  dark-relay-rail-devnet.json  dark-relay-rail-mainnet-beta.json  federated-enull-devnet.json  nullpay-stealth-devnet.json  (+2 more)
src/: faucet.rs  (+3 more)
(+1717 files in other folders)
