[package]
name = "pdx-dark-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
integration-tests = []
default = []

[dependencies]
solana-program = "=1.18.26"
borsh = { version = "1.5", features = ["derive"] }
groth16-solana = "0.0.2"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
num-bigint = "0.4"
thiserror = "1.0"
spl-token = { version = "=4.0.3", default-features = false }
spl-token-2022 = { version = "=3.0.5", default-features = false, features = ["zk-ops"] }
spl-associated-token-account = { version = "=2.3.0", default-features = false }
