[workspace]
members = [
    # FEDERATED eNULL — Chaumian BDHKE ecash, k-of-n guardian federation (DEVNET)
    "crates/dark-fedimint-ecash",
    "programs/dark_fedimint_redeem",
    "programs/receipt_anchor",
    "programs/dark_nullifier_banks",
    "programs/dark_compressed_receipts",
    "programs/dark_chaff",
    "programs/dark_scratch",
    "crates/alt-fog-router",
    "crates/dark-poseidon-tree",
    "crates/receipt-spend",
    "crates/dark-relay-router",
    "crates/dark-bundle-cloak",
    "crates/swarm-capsule",
    "crates/sealed-fee-quotes",
    "crates/state-tier-router",
    "crates/rent-blast-radius",
    "crates/receipt-rollup-lite",
    "crates/dark-macaroons",
    "crates/ghost-spl-ledger",
    "crates/lock-scheduler",
    "crates/shape-pool",
    "crates/compute-coupon",
    "crates/useful-chaff-planner",
    "crates/intent-capsule",
    "crates/dark-module-abi",
    "crates/dark-capability-registry",
    "crates/caveat-engine",
    "crates/dark-session-netting",
    "crates/account-fee-heatmap",
    "crates/nullifier-bank-planner",
    "crates/compute-coupon-market",
    "crates/alt-fog-vault",
    "crates/poison-receipts",
    "crates/copy-sniper-sim",
    "crates/strategy-cloak-delay",
    "crates/alpha-leak-meter",
    "crates/agent-kill-switch",
    "crates/dark-blink-intent",
    "crates/rent-bounty-hunter",
    "crates/session-loss-fuse",
    "crates/degen-api-meter",
    "crates/dark-tip-notes",
    "crates/pvp-prediction-receipts",
    "crates/dark-gift-notes",
    "crates/dispute-receipt-oracle",
    "crates/feature-commit-reveal",
    "crates/model-output-receipts",
    "crates/public-puzzle-generator",
    "crates/telegram-command-receipts",
    # FRONTIER_FINAL - Phase 1 (Poseidon / hash parity)
    "crates/dark-hash-core",
    # FRONTIER_FINAL - Phase 2 (ZK proof scaffold)
    "crates/dark-proof-core",
    "crates/dark-proof-receipts",
    "programs/dark_proof_gate_lite",
    # FRONTIER_FINAL - Phase 3 (Bonsol / RISC0)
    "crates/dark-batch-auditor-core",
    "crates/dark-bonsol-adapter",
    "crates/dark-risc0-adapter",
    # FRONTIER_FINAL - Phase 4 (x402 flow)
    "crates/dark-x402-core",
    "crates/dark-x402-server-mock",
    "crates/dark-x402-client-mock",
    "crates/dark-x402-devnet-verify",
    "crates/dark-x402-nullifier-bridge",
    "crates/dark-x402-e2e-demo",
    "crates/dark-nullifier-epoch-manager",
    "crates/dark-withdrawal-bundle",
    "crates/dark-stealth-address",
    # NullPay - ed25519 native-signing stealth addresses (pay-by-.null-name, recipient-unlinkable)
    "crates/dark-stealth-ed25519",
    "crates/dark-private-x402",
    "crates/dark-sparse-merkle",
    # WAVE_16_PRIMITIVES - commitment chain, threshold nullifier, batch stealth scan, dutch auction, coalition proof, sliding budget, selective disclosure
    "crates/dark-commitment-chain",
    "crates/dark-threshold-nullifier",
    "crates/dark-batch-stealth-scan",
    "crates/dark-private-dutch-auction",
    "crates/dark-coalition-proof",
    "crates/dark-sliding-window-budget",
    "crates/dark-selective-disclosure",
    # WAVE_17_PRIMITIVES - private airdrop, MEV shield, proof of innocence, timelock encryption
    "crates/dark-private-airdrop",
    "crates/dark-mev-shield",
    "crates/dark-proof-of-innocence",
    "crates/dark-timelock-encryption",
    # WAVE_18_PRIMITIVES - HTLC receipts and private voting
    "crates/dark-htlc-receipt",
    "crates/dark-private-voting",
    # FRONTIER_FINAL - Phase 5 (ZK compression)
    "crates/dark-compression-core",
    "crates/dark-compressed-receipt-ledger",
    # FRONTIER_FINAL - Phase 8 (demo)
    "crates/dark-frontier-final-demo",
    # TRUE_FRONTIER_PRIMITIVES - 10 new Dark Null product primitives
    "crates/agent-permission-notes",
    "crates/spend-shadows",
    "crates/agent-flight-recorder",
    "crates/receipt-souls",
    "crates/alpha-capsules",
    "crates/chaff-economy",
    "crates/session-note-channel",
    "crates/onchain-puzzle-compiler",
    "crates/no-custody-attestation",
    "crates/roadmap-commitments",
    # TRUE_FRONTIER_DEVNET_DEMO - devnet frontier demo
    "crates/true-frontier-devnet-demo",
    # DARK_NULL_PUBLIC_WOW_DEMO - clickable public demo "AI agent spent without a wallet"
    "crates/rogue-agent-demo-core",
    # DARK_NULL_TRANSACTION_RITUAL_VM_V1
    "crates/ritual-grammar",
    "crates/ritual-proof-capsule",
    "crates/ritual-shape-market",
    "crates/cpi-firewall",
    "crates/account-lock-alchemy",
    "crates/rent-delta-proof",
    "crates/ritual-compiler",
    "programs/dark_ritual_gate",
    "crates/ritual-vm-demo",
    "crates/dark-ritual-gate-verify",
    # DARK_NULL_RITUAL_BOUND_TOKEN_V1 - Token-2022 token with ritual bouncer
    "programs/dark_ritual_transfer_hook",
    "crates/ritual-token-factory",
    "crates/ritual-precompile-braid",
    "crates/ritual-memo-capsule",
    "crates/ritual-bound-token-demo",
    # DARK_NULL_DEGEN_SWARM_ECONOMY_V1
    "crates/rent-sweeper-swarm",
    "crates/bounty-blink-jobs",
    "crates/cold-route-fee-sniper",
    "crates/no-deploy-token-launcher",
    "crates/scratch-slot-leasing",
    "crates/shape-pool-pass",
    "crates/useful-chaff-market",
    "crates/copy-sniper-trap-board",
    "crates/ritual-puzzle-market",
    "crates/fee-cashback-receipts",
    "crates/sleep-earn-watcher",
    "crates/degen-scoreboard",
    "crates/degen-swarm-demo",
    # DARK_NULL_FRONTIER_EDGE_V1 - frontier edge from research report
    "crates/dark-alpha-receipts",
    "crates/dark-swarm-capsule",
    "crates/dark-compressed-leaves",
    "crates/dark-meme-risk",
    "crates/dark-fee-optimizer",
    # FRONTIER EDGE - ritual-blink-gateway: Blinks + x402 + Token-2022 Hook + HookVerdict receipt
    "crates/ritual-blink-gateway",
    # DARK_NULL_FRONTIER_EDGE_V1 - demo binary exercising all 6 frontier crates
    "crates/dark-frontier-demo",
    # BETTING_ALPHA - sealed pick wall, copy sniper trap, hint ladder, proofboard, fee rebate, alpha receipts
    "crates/sealed-pick-x402-wall",
    "crates/copy-sniper-tax-trap",
    "crates/hint-ladder-market",
    "crates/betting-proofboard",
    "crates/fee-rebate-for-solvers",
    "crates/betting-alpha-receipts",
    # NEW_DEGEN_PRIMITIVES_V1
    "crates/fee-weather-market",
    "crates/ritual-mev-insurance",
    "crates/token-arcade-factory",
    "crates/rent-graveyard-index",
    "crates/blink-work-board",
    "crates/shape-subscription",
    "crates/p-token-roi-bot",
    "crates/confidential-amount-watch",
    "crates/nulla-betting-edge-demo",
    # NULL_FLYWHEEL_VAULT_V1 - premium-fee conversion  rewards vault
    "crates/null-flywheel-core",
    # NULL Miner — external task kinds for the NULL Miner network
    "crates/null-miner-tasks",
    # NULL_FLYWHEEL_VAULT_V1 - execution receipts for public auditability
    "crates/null-flywheel-receipts",
    # NULL_FLYWHEEL_VAULT_V1 - commit-reveal schedule randomizer
    "crates/null-flywheel-randomizer",
    # NULL_FLYWHEEL_VAULT_V1 - simulation demo binary
    "crates/null-flywheel-sim",
    # BLS12_381_CREDENTIAL - first open-source BLS12-381 credential aggregation program on Solana
    # SIMD-0388 BLS12-381 syscalls LIVE on devnet (epoch 1059), feature gate b1sgUiJ3qu7hYm3tNDyyqZNQd6gLGJmJppnLNa93PCQ
    "programs/dark_bls12_381_credential",
    # SIMD-0302 BN254 G2 reference implementation
    # Feature gate: bn1hKNURMGQaQoEVxahcEAcqiX3NwRs6hgKKNSLeKxH
    # Devnet: live since epoch 1058 | Testnet: live since epoch 954
    # Demonstrates: G2_ADD (opcode 4), G2_MUL (opcode 6), Groth16 with dynamic G2 VK
    "programs/dark_bn254_g2_ref",
    # dark-groth16-core: real BN254 Groth16 verifier using alt_bn128_pairing
    "crates/dark-groth16-core",
    # dark-kzg-verifier: real KZG-10 polynomial commitment verifier using alt_bn128 pairing syscalls
    "crates/dark-kzg-verifier",
    # DARK_ZK_PRIMITIVES_V1 - on-chain BN254 Groth16 (Phase 1)
    "crates/dark-poseidon-bn254",
    # REAL circomlib-matching BN254 Poseidon (light-poseidon). Byte-matches the
    # circom circuits — the keystone that unblocks the shielded pool. Replaces
    # the dark-poseidon-bn254 SHA-256 stub for proof-compatible hashing.
    "crates/dark-poseidon-real",
    "crates/dark-bn254-circuit",
    # DARK_ZK_PRIMITIVES_V1 - Phase 2 (proof bundle generator + on-chain gate)
    "crates/dark-bn254-proof-gen",
    "programs/dark_bn254_gate",
    # X402_ACCESS_GATE - x402 payment tier access proof verifier (3 public inputs: commitment, threshold, nullifier)
    "programs/dark_x402_access_gate",
    # REPUTATION_GATE - private track-record proof verifier (6 public inputs: root, min_count, min_volume, window_start, nullifier, agent_commitment)
    "programs/dark_reputation_gate",
    # RECEIPT_COMMITMENT_TREE - incremental Poseidon Merkle tree of receipt commitments (the leaf-writer / root source)
    "programs/receipt_commitment_tree",
    # DARK_ZK_PRIMITIVES_V1 - Phase 3 (on-chain nullifier recorder)
    "programs/dark_nullifier_record",
    # DARK_ZK_PRIMITIVES_V1 - Phase 4 (Semaphore group registry + nullifier store)
    "programs/dark_semaphore",
    # NULL_MINER_V1 - Token-2022 transfer hook, secp256r1 passkey vault, secp256k1 ETH auth
    "programs/null_token_hook",
    "programs/dark_secp256r1_vault",
    "programs/dark_secp256k1_auth",
    "programs/null_lottery",
    "programs/null_mint_gate",
    "programs/live_attestation",
    # SOULBOUND_AGENT_PASSPORT - NonTransferable Token-2022 credential + PermanentDelegate revocation
    "programs/agent_credential_mint",
    # NULL_REGISTRAR — .null domain name system on Solana
    "programs/null_registrar",
    # WAVE_14_BATCH_1 - privacy primitives
    "crates/dark-atomic-swap",
    "crates/dark-time-capsule",
    "crates/dark-merkle-accumulator",
    "crates/dark-private-order-book",
    "crates/dark-receipt-chain",
    # WAVE_14_BATCH_2 - advanced privacy primitives
    "crates/dark-validator-set",
    "crates/dark-blind-auction",
    "crates/dark-recursive-proof",
    "crates/dark-confidential-transfer",
    "crates/dark-zkp-membership",
    # WAVE_15_BATCH_1 - epoch, privacy layer, shielded pool, lottery, compliance
    "crates/dark-epoch-transition",
    "crates/dark-privacy-layer",
    "crates/dark-shielded-pool",
    "crates/dark-private-lottery",
    "crates/dark-compliance-proof",
    # ORPHAN_INTEGRATION - 151 previously standalone crates unified into workspace
    "crates/agent-shielded-capsule",
    "crates/dark-access-token",
    "crates/dark-agent-coalition",
    "crates/dark-agent-escrow",
    "crates/dark-agent-payment-sdk",
    "crates/dark-agent-receipt",
    "crates/dark-anon-credential",
    "crates/dark-anon-signal",
    "crates/dark-anonymous-credential-v2",
    "crates/dark-anonymous-credentials",
    "crates/dark-anonymous-payment",
    "crates/dark-anonymous-swap",
    "crates/dark-audit-log",
    "crates/dark-batch-nullifier",
    "crates/dark-blind-oracle",
    "crates/dark-blind-signature",
    "crates/dark-blind-swap",
    "crates/dark-bond-covenant",
    "crates/dark-bulletproof-range",
    "crates/dark-commit-reveal-game",
    "crates/dark-commitment-accumulator",
    "crates/dark-commitment-scheme",
    "crates/dark-competitive-proof",
    "crates/dark-compliance-receipts",
    "crates/dark-compute-capsule",
    "crates/dark-compute-receipt",
    "crates/dark-credential-revocation",
    "crates/dark-cross-chain-lock",
    "crates/dark-cross-chain-receipt",
    "crates/dark-cross-primitive-demo",
    "crates/dark-dao-vote",
    "crates/dark-dark-dao",
    "crates/dark-dark-indexer",
    "crates/dark-dark-pool",
    "crates/dark-decentralized-id",
    "crates/dark-encrypted-memo",
    "crates/dark-encrypted-state",
    "crates/dark-escrow-multisig",
    "crates/dark-fee-commitment",
    "crates/dark-fee-escrow",
    "crates/dark-fee-market",
    "crates/dark-flash-loan-guard",
    "crates/dark-gossip-proof",
    "crates/dark-governance-proposal",
    "crates/dark-groth16-stub",
    "crates/dark-identity-bridge",
    "crates/dark-identity-credential",
    "crates/dark-intent-proof",
    "crates/dark-liquidity-proof",
    "crates/dark-merkle-forest",
    "crates/dark-merkle-proof",
    "crates/dark-message-capsule",
    "crates/dark-mixer-receipt",
    "crates/dark-mixer-v2",
    "crates/dark-mpc-ceremony",
    "crates/dark-mpc-round",
    "crates/dark-multisig-threshold",
    "crates/dark-note-commitment",
    "crates/dark-note-compression",
    "crates/dark-note-ledger",
    "crates/dark-note-mixer",
    "crates/dark-null-token",
    "crates/dark-nullifier-batch",
    "crates/dark-nullifier-map",
    "crates/dark-nullifier-tree",
    "crates/dark-oblivious-transfer",
    "crates/dark-oracle-feed",
    "crates/dark-payment-channel",
    "crates/dark-pedersen-commit",
    "crates/dark-plonk-stub",
    "crates/dark-privacy-audit",
    "crates/dark-privacy-budget",
    "crates/dark-privacy-oracle",
    "crates/dark-privacy-pipeline",
    "crates/dark-privacy-stats-v2",
    "crates/dark-privacy-stats-v3",
    "crates/dark-private-amm",
    "crates/dark-private-auction-v2",
    "crates/dark-private-auction",
    "crates/dark-private-bridge",
    "crates/dark-private-crowdfund",
    "crates/dark-private-dao-v2",
    "crates/dark-private-escrow",
    "crates/dark-private-governance",
    "crates/dark-private-insurance",
    "crates/dark-private-invoice",
    "crates/dark-private-lending-v2",
    "crates/dark-private-lending",
    "crates/dark-private-liquidation",
    "crates/dark-private-nft",
    "crates/dark-private-payroll",
    "crates/dark-private-referral",
    "crates/dark-private-set-intersection",
    "crates/dark-private-staking",
    "crates/dark-private-subscription",
    "crates/dark-private-transfer-v2",
    "crates/dark-proof-aggregator",
    "crates/dark-proof-bundle",
    "crates/dark-proof-cascade",
    "crates/dark-proof-of-history",
    "crates/dark-proof-of-reserve",
    "crates/dark-proof-of-reserves",
    "crates/dark-proof-of-work",
    "crates/dark-proof-relay",
    "crates/dark-protocol-stats",
    "crates/dark-pvp-hedge",
    "crates/dark-range-proof",
    "crates/dark-rate-limiter",
    "crates/dark-receipt-aggregator",
    "crates/dark-relay-proof",
    "crates/dark-reputation-badge",
    "crates/dark-reputation-ring",
    "crates/dark-reputation-score",
    "crates/dark-ring-vrf",
    "crates/dark-secret-sharing",
    "crates/dark-session-proof",
    "crates/dark-shielded-client",
    "crates/dark-shielded-pool-core",
    "crates/dark-shielded-vote",
    "crates/dark-signal-proof",
    "crates/dark-slashing-proof",
    "crates/dark-sovereign-proof",
    "crates/dark-spending-limit",
    "crates/dark-staking-rewards",
    "crates/dark-state-channel",
    "crates/dark-stealth-note",
    "crates/dark-threshold-decrypt",
    "crates/dark-threshold-sig",
    "crates/dark-threshold-signature",
    "crates/dark-timelock-vault",
    "crates/dark-token-mixer",
    "crates/dark-token-vesting",
    "crates/dark-tx-capsule",
    "crates/dark-vdf-proof",
    "crates/dark-verifiable-delay",
    "crates/dark-vote-delegation",
    "crates/dark-vote-tally",
    "crates/dark-wasm-compute",
    "crates/dark-zk-complete-demo",
    "crates/dark-zk-rollup-stub",
    "crates/dark-zk-snark-stub",
    "crates/dark-zk-snark-v2",
    "crates/dark-zkp-bulletproof",
    "crates/dark-zkp-groth16-v2",
    "crates/dark-zkp-identity-circuit",
    "crates/dark-zkp-range-v2",
    "crates/dark-zkp-range-v3",
    "crates/dark-zkp-schnorr",
    "crates/dark-zkp-set-membership",
    "crates/dark-zkp-sigma",
    "crates/dark-zkvm-bridge",
    # DARK_COMMITMENT_CHAIN - hash-linked commitment chain for private balance proofs
    "crates/dark-commitment-chain",
    # DARK_HTLC_RECEIPT - HTLC receipts for cross-party x402 settlements
    "crates/dark-htlc-receipt",
    # DARK_NULL_ZK_V2 - collision-safe Poseidon, IMT nullifier set, amount receipts, Nova folds, ZK hook
    "crates/dark-poseidon-safe",
    "crates/dark-imt-nullifier",
    "crates/dark-amount-receipt",
    "crates/dark-nova-receipt",
    "crates/dark-zk-hook",
    # DARK_X402_FRONTIER_V1 - x402-native stealth addresses, session keys, private intents, batch proofs, compliance proofs
    "crates/dark-x402-stealth",
    "crates/dark-x402-session-key",
    "crates/dark-x402-private-intent",
    "crates/dark-x402-batch-proof",
    "crates/dark-x402-compliance-proof",
    # DARK_SHIELDED_POOL_V1 - first Solana-native fixed-denomination shielded transfer pool
    "programs/dark_shielded_pool",
    "crates/dark-pool-sdk",
    # DARK_SHIELDED_VERIFIER - real BN254 Groth16 verifier using alt_bn128 syscalls
    "crates/dark-shielded-verifier",
    # DARK_NULL_FRONTIER_V1 - agent passport, anti-MEV commit-reveal, swarm fund, ZK rate proof
    "crates/dark-agent-passport",
    "crates/dark-x402-commit-reveal",
    "crates/dark-swarm-fund",
    "crates/dark-rate-proof",
]
resolver = "2"

[workspace.package]
version   = "0.1.0"
edition   = "2021"
license   = "MIT"
authors   = ["Parad0x Labs"]

[workspace.dependencies]
solana-program      = "=1.18.26"
solana-sdk          = "=1.18.26"
solana-client       = "=1.18.26"
solana-program-test = "=1.18.26"
tokio               = { version = "1", features = ["full"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
ed25519-dalek       = "1"
sha2                = "0.11"
rand                = "0.8"
reqwest             = { version = "0.12", features = ["json"] }
thiserror           = "1.0"
spl-token-2022      = { version = "3", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution  = "0.6"
spl-memo            = "4"
# ── Testing / verification ──────────────────────────────────────────────────
proptest            = "1.5"
proptest-derive     = "0.8"
rayon               = "1.10"
statrs              = "0.17"
kolmogorov_smirnov  = "1.1"
