[package]
name = "dark-alien-final-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dark-x402-core        = { path = "../dark-x402-core" }
dark-proof-core       = { path = "../dark-proof-core" }
dark-proof-receipts   = { path = "../dark-proof-receipts" }
dark-batch-auditor-core = { path = "../dark-batch-auditor-core" }
dark-compression-core = { path = "../dark-compression-core" }
caveat-engine         = { path = "../caveat-engine" }
dark-session-netting  = { path = "../dark-session-netting" }
dark-bonsol-adapter   = { path = "../dark-bonsol-adapter" }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
