[package]
name = "dark-fedimint-ecash"
version = "0.1.0"
edition = "2021"
description = "Federated Chaumian ecash (BDHKE over Ristretto) — host-side mint/unblind/verify + k-of-n threshold issuance (DEVNET, unaudited)."

# This crate has TWO consumers:
#   * host-side (std): the full federation — DKG, threshold signing, the CLI
#     binary that emits redeem artifacts (uses rand, serde_json).
#   * on-chain (no_std): only the verify path is needed there, and the redeem
#     program depends on `dark-fedimint-bdhke` (a sibling no_std crate) instead,
#     so this crate can freely use std.

[features]
default = ["std"]
std = ["rand", "serde", "serde_json"]

[dependencies]
# REAL Ristretto group ops — the same curve25519-dalek already pinned in
# Cargo.lock (3.2.1). NOT the SHA256 `dark-blind-signature` stub.
curve25519-dalek = { version = "3.2.1", default-features = false, features = ["u64_backend", "serde"] }
sha2 = "0.9"            # digest 0.9 — matches curve25519-dalek 3.2.1's digest dep
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "enull_mint"
path = "src/bin/enull_mint.rs"
required-features = ["std"]
