[package]
name = "dark-kvac"
version = "0.1.0"
edition = "2021"
description = "Keyed-verification anonymous credentials (MAC_GGM over Ristretto, CMZ 2013) for x402 — ceremony-free anonymous-but-accountable access. Host prover + syscall-backed on-chain verifier (DEVNET, unaudited)."

# Two consumers, same pattern as dark-fedimint-ecash:
#   * host-side (std): issuer keygen, issuance, the presentation prover, the CLI.
#   * on-chain (no_std): only the presentation VERIFIER + nullifier check, which
#     reduces to Ristretto group-op syscalls + one SHA-512.

[features]
default = ["std"]
std = ["rand", "serde", "serde_json"]

[dependencies]
# REAL Ristretto group ops — identical pin to dark-fedimint-ecash (Cargo.lock 3.2.1).
# NOT the SHA256 dark-anon-credential* stubs this crate supersedes.
curve25519-dalek = { version = "3.2.1", default-features = false, features = ["u64_backend", "serde"] }
sha2 = "0.9"            # digest 0.9 — matches curve25519-dalek 3.2.1's digest dep
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
hex = "0.4"

[[bin]]
name = "kvac_e2e"
path = "src/bin/kvac_e2e.rs"
required-features = ["std"]
