[package]
name = "dark-note-compression"
version = "0.1.0"
edition = "2021"

[dependencies]
dark-poseidon-bn254     = { path = "../dark-poseidon-bn254" }
dark-shielded-pool-core = { path = "../dark-shielded-pool-core" }
sha2      = "0.10"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
