[package]
name = "dark-payment-channel"
version = "0.1.0"
edition = "2021"
description = "Off-chain hash-locked payment channel — private micropayment state updates between two parties, on-chain open/close only"

[dependencies]
sha2  = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
