[package]
name = "dark-private-x402"
version = "0.1.0"
edition = "2021"
description = "Complete private x402 payment pipeline: BN254 ECDH stealth address + shielded note + Merkle withdrawal"

[dependencies]
dark-stealth-address    = { path = "../dark-stealth-address" }
dark-withdrawal-bundle  = { path = "../dark-withdrawal-bundle" }
dark-merkle-accumulator = { path = "../dark-merkle-accumulator" }
sha2                    = "0.11"
serde                   = { version = "1", features = ["derive"] }
